<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="@dimen/_500sdp"
    android:layout_gravity="center"
    android:background="@drawable/bg_term_rounded_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/terms_conditions"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearButton"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp">

    </WebView>


    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.codestructure.customui.OkTextView
            android:id="@+id/tv_accept"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/backround_rectangle_terms_btn_blue"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/terms_accept"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_textsize"
            android:textStyle="bold" />

        <com.codestructure.customui.OkTextView
            android:id="@+id/tv_dontAccept"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/backround_rectangle_terms_btn_gray"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/terms_dont_accept"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_textsize"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
