<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_back_arrow" />

            <com.codestructure.customui.OkTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/label_create_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_firstName"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_lastName"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_email"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_birth_date"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />

                </android.support.design.widget.TextInputLayout>

                <com.codestructure.customui.OkTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/required_age_to_use_app_is_18_years"
                    android:textColor="@color/chat_date_time_color"
                    android:textSize="@dimen/normal_textsize" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.codestructure.customui.OkTextView
                        android:id="@+id/tv_pass_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_30sdp"
                        android:text="@string/week_pass"
                        android:textAllCaps="true"
                        android:textColor="@color/week_pass_color"
                        android:textSize="@dimen/normal_textsize"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/chat_date_time_color"
                        app:counterTextAppearance="@color/row_bg_color"
                        app:hintTextAppearance="@style/Theme.App.Base">

                        <com.codestructure.customui.OkEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/row_bg_color"
                            android:fontFamily="@font/sf_pro_display_medium"
                            android:hint="@string/label_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/row_bg_color"
                            android:textSize="@dimen/normal_textsize" />

                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/progress_pass_strength"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_pass"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginRight="@dimen/_35sdp"
                        android:indeterminate="false"
                        android:maxHeight="@dimen/_6sdp"
                        android:minHeight="@dimen/_6sdp"
                        android:progress="0"
                        android:thumb="@null"
                        android:visibility="invisible" />
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_confirmPassword"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/chat_date_time_color"
                    app:counterTextAppearance="@color/row_bg_color"
                    app:hintTextAppearance="@style/Theme.App.Base">

                    <com.codestructure.customui.OkEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/row_bg_color"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:hint="@string/label_phoneNumber"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textColorHint="@color/row_bg_color"
                        android:textSize="@dimen/normal_textsize" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_iagree_to_the_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:paddingStart="@dimen/_5sdp"
                        android:button="@drawable/custom_check"
                        tools:ignore="RtlSymmetry" />

                    <com.codestructure.customui.OkTextView
                        android:id="@+id/tv_termsCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/label_iagree_to_the_terms_condition"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textSize="@dimen/normal_textsize"
                        android:textColor="@color/black" />
                </LinearLayout>

                <com.codestructure.customui.OkTextView
                    android:id="@+id/tv_createUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@drawable/backround_rectangle_withcornor_btn"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:gravity="center"
                    android:text="@string/btn_create_user"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_textsize" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>