<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/header" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_2sdp"
                    android:src="@mipmap/ic_home" />

                <com.codestructure.customui.OkTextView
                    android:id="@+id/tv_home_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/home"
                    android:textColor="@color/user_account_first_name_value"
                    android:textSize="@dimen/very_small_textsize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_list"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_2sdp"
                    android:src="@mipmap/ic_list_unselected" />

                <com.codestructure.customui.OkTextView
                    android:id="@+id/tv_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/list"
                    android:textColor="@color/user_account_first_name_value"
                    android:textSize="@dimen/very_small_textsize" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>